--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
   background-color: #ff4c68;
   color: white;
 }
+body {
+  font-family: "Montserrat";
+}
+
 h1 {
   font-family: "Montserrat";
   font-weight: 900;
@@ -15,13 +19,14 @@ h2 {
   font-size: 3rem;
   line-height: 1.5;
 }
+p {
+  color: #8f8f8f;
+}
+
 .container-fluid {
   padding: 3% 15% 7%;
 }
 
-body {
-  font-family: "Montserrat";
-}
 /* Navigation Bar */
 .navbar-brand {
   font-family: "Ubuntu";
@@ -62,7 +67,6 @@ body {
   color: #ff4c68;
 }
 .feature-p {
-  color: #8f8f8f;
   width: 60%;
   margin: 0 auto 0 auto;
 }
@@ -115,4 +119,39 @@ body {
 }
 .pricing-col {
   padding: 3% 2%;
+}
+
+@media (max-width: 992px) {
+  #title {
+    text-align: center;
+  }
+  .dog-img {
+    position: static;
+    transform: rotate(0);
+    width: 60%;
+  }
+}
+
+/* Call to Action */
+#cta {
+  text-align: center;
+  background-color: #ff4c68;
+  /* padding: 55px 15% 60px; */
+  padding: 7% 15%;
+}
+#cta h3 {
+  font-family: "Montserrat";
+  font-weight: 900;
+  font-size: 3.5rem;
+  color: #fff;
+  margin: 0 0 20px;
+}
+/* Footer */
+#footer {
+  background-color: #fff;
+  text-align: center;
+  padding: 7% 15%;
+}
+#footer .icon {
+  margin: 0 px;
 }
